# autom

./: README.md  autom.cabal  finaut.cabal
src/: Main.hs  bytestring.hs  machine.hs  stream.hs  text.hs
