name:                autom
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jnonce/autom#readme
license:             MIT
license-file:        LICENSE
author:              jnonce
maintainer:          jnonce@outlook.com
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable autom
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Machine, Stream, Text
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative >= 0.12
                     , text >= 1.1
                     , mtl
                     , containers
