name:                finaut
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jnonce/finaut#readme
license:             BSD3
license-file:        LICENSE
author:              jnonce
maintainer:          example@example.com
-- copyright:           2017 Author name here
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable finaut
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Machine, Stream, Text
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative >= 0.12
                     , text >= 1.1
                     , mtl
                     , containers
